integration of dark mode

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,12 +2,24 @@
 @import "./App.scss";
 @import "./movie.scss";
 @import "./navBar.scss";
+@import "./searchBar.scss";
+@import "./toggle-dark-mode.scss";
 
 @font-face {
   font-family: "Futura LT";
   src: "../fonts/FuturaLT.ttf";
   font-style: normal;
   font-weight: normal;
+}
+body.light-mode {
+  background-color: #fff;
+  color: #333;
+  transition: background-color 0.3s ease;
+}
+
+body.dark-mode {
+  background-color: #1a1919;
+  color: #999;
 }
 
 body {
