--- a/src/styles/movie.scss
+++ b/src/styles/movie.scss
@@ -4,11 +4,24 @@
   border-radius: 16px;
   border-color: #4f4f4f;
   box-sizing: border-box;
+  padding: 18px;
+  height: 100%;
   box-shadow: 4px 4px 7px rgba(0, 0, 0, 0.15);
-  padding-top: 18px;
-  padding-bottom: 19px;
-  padding-left: 18px;
-  padding-right: 18px;
+  transition: all 0.5s ease;
+}
+
+.movie-card:hover {
+  transform: translate3D(0, -1px, 0) scale(1.01); /* move up slightly and zoom in */
+  box-shadow: 4px 4px 7px rgba(0, 0, 0, 0.16);
+  transition: all 0.4s ease; /* zoom in */
+  // cursor: pointer;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 
 .movie-description {
@@ -53,7 +66,7 @@ h2 {
 
 h6 {
   font-family: "Futura LT";
-  color: #3f3f3f;
+  // color: #3f3f3f;
   font-size: 12px !important;
   font-weight: 800 !important;
 }
@@ -63,7 +76,7 @@ p {
   font-size: 12px;
   font-weight: 400;
   line-height: 16.67px;
-  color: #6d6e70;
+  // color: #6d6e70;
 }
 
 span {
@@ -71,5 +84,5 @@ span {
   font-size: 12px;
   font-weight: 400;
   line-height: 16.67px;
-  color: #6d6e70;
+  // color: #6d6e70;
 }
