--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,8 @@
 @import "./navBar.scss";
 @import "./searchBar.scss";
 @import "./toggle-dark-mode.scss";
+@import "./oder-by.scss";
+@import "./gender.scss";
 
 @font-face {
   font-family: "Futura LT";
