--- a/src/styles/searchBar.scss
+++ b/src/styles/searchBar.scss
@@ -4,9 +4,18 @@
   border-radius: 12px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
-.input-search-bar {
+.input-search-bar-icon {
   background-image: url("../assets/search-icon.png");
   background-repeat: no-repeat;
   background-position: right;
+}
+
+.input-search-bar {
+  background: transparent;
+  border-radius: 12px;
   border: none;
+}
+
+.input-search-bar:focus-visible {
+  outline: none;
 }
