--- a/src/assets/styles/movie.scss
+++ b/src/assets/styles/movie.scss
@@ -32,7 +32,7 @@
   // -webkit-box-orient: vertical;
 }
 .star-full {
-  background-image: url("../assets/Star-full.png");
+  background-image: url("../images/Star-full.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -41,7 +41,7 @@
 }
 
 .star-void {
-  background-image: url("../assets/Star-void.png");
+  background-image: url("../images/Star-void.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
