--- a/src/assets/styles/oder-by.scss
+++ b/src/assets/styles/oder-by.scss
@@ -1,5 +1,5 @@
 #order-by {
-  background-image: url("../assets/Arrow-Icon.png");
+  background-image: url("../images/Arrow-Icon.png");
   background-repeat: no-repeat;
   background-position: right;
   border: none;
