--- a/src/assets/styles/searchBar.scss
+++ b/src/assets/styles/searchBar.scss
@@ -5,7 +5,7 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 .input-search-bar-icon {
-  background-image: url("../assets/search-icon.png");
+  background-image: url("../images/search-icon.png");
   background-repeat: no-repeat;
   background-position: right;
 }
