--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -23,6 +23,9 @@ body.light-mode {
 body.dark-mode {
   background-color: #333333;
   color: #e30052;
+  h1 {
+    color: #333333;
+  }
 }
 
 body {
