--- a/src/assets/styles/movie.scss
+++ b/src/assets/styles/movie.scss
@@ -14,6 +14,7 @@
   transform: translate3D(0, -1px, 0) scale(1.01); /* move up slightly and zoom in */
   box-shadow: 4px 4px 7px rgba(0, 0, 0, 0.16);
   transition: all 0.4s ease; /* zoom in */
+
   // cursor: pointer;
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
@@ -26,10 +27,6 @@
 
 .movie-description {
   max-height: 65%;
-  // overflow-y: visible;
-  // display: -webkit-box;
-  // -webkit-line-clamp: 9;
-  // -webkit-box-orient: vertical;
 }
 .star-full {
   background-image: url("../images/Star-full.png");
@@ -48,6 +45,7 @@
   width: 1rem;
   height: 1rem;
 }
+
 @media (min-width: 767px) {
   .star-full,
   .star-void {
@@ -57,32 +55,29 @@
 }
 
 h2 {
-  font-family: "Futura LT";
-  color: #3f3f3f;
   font-size: 14px !important;
   font-weight: 800 !important;
   line-height: 19.47px !important;
 }
 
+#title {
+  margin: (auto 0);
+}
 h6 {
-  font-family: "Futura LT";
-  // color: #3f3f3f;
   font-size: 12px !important;
   font-weight: 800 !important;
 }
 
 p {
-  font-family: "Futura LT";
   font-size: 12px;
   font-weight: 400;
   line-height: 16.67px;
-  // color: #6d6e70;
+  color: #6d6e70;
 }
 
 span {
-  font-family: "Futura LT";
   font-size: 12px;
   font-weight: 400;
   line-height: 16.67px;
-  // color: #6d6e70;
+  color: #6d6e70;
 }
