--- a/src/assets/styles/navBar.scss
+++ b/src/assets/styles/navBar.scss
@@ -2,3 +2,20 @@
   height: 10vh;
   max-height: 10vh;
 }
+#navbarText.show {
+  background-color: #fffff3;
+  div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+  }
+  h1 {
+    text-align: center;
+  }
+  #gender-filter {
+    span {
+      width: 100% !important;
+    }
+  }
+}
