--- a/src/assets/styles/toggle-dark-mode.scss
+++ b/src/assets/styles/toggle-dark-mode.scss
@@ -21,7 +21,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: #ff4365;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
@@ -39,11 +39,11 @@
 }
 
 input:checked + .slider {
-  background-color: #e30052;
+  background-color: #030301;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #e30052;
+  box-shadow: 0 0 1px #030301;
 }
 
 input:checked + .slider:before {
@@ -59,4 +59,11 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+@media (max-width: 992px) {
+  #toggleDarkMode {
+    position: absolute;
+    top: 10%;
+    right: 2%;
+  }
 }
